public/css/application.css
:root{
  --text-color: #000000;
  --link-blue: blue;
  --link-hover: darkblue;
  --subtle-text-color: #585860;
  --top-color: #f2f2fd;
  --top-color-transparent: #eeeef6bd;
  --medium-color: #e2e2ea;
  --bottom-color: #eeeeee;
  --shadow: #cacaca;
  --shadow-transparent: #cacaca80;
}
@media (prefers-color-scheme:dark){
  :root{
    --text-color: #ddd;
    --link-blue: #4c4cff;
    --link-hover: #8888ff;
    --subtle-text-color: #585860;
    --top-color: #232323;
    --top-color-transparent: #272727bd;
    --medium-color: #1a1a1a;
    --bottom-color: #111111;
    --shadow: #080808;
    --shadow-transparent: #08080880;
  }
}
[hidden] { display: none !important; }
body{
    font-family: "helvetica neue", helvetica, arial, sans-serif;
    font-size: 17.6px;
    margin: 0;
    background-color:var(--medium-color);
    color:var(--text-color);
    text-align:left;
}
*{
    line-height: 1.25em;
}
section#content{
    max-width:1024px;
    margin:auto;
}
header{
    display:flex;
    position: sticky;
    top:0;
    padding:1.2em 1em;
    box-shadow:0 0 0.5em var(--shadow);
    background-color:var(--top-color);
    z-index: 50000;
}
@supports (backdrop-filter:blur(5px)){
    header{
        backdrop-filter:blur(5px);
        background-color:var(--top-color-transparent);
    }
}
#logo{
    border-radius:100%;
}
#logo img{
    vertical-align:top;
    height:2em;
    margin:0.3em;
}
#siteTitle{
    font-size: 2rem;
    font-weight:bold;
    margin: auto 0;
}
header nav{
    margin-left:auto;
    display:flex;
}
header nav *{
    margin:auto 0.2em;
}

*::-moz-focus-inner{
    /*Remove mozilla button click outlines*/
    border:0;
}
*:focus {
    outline: none;
}
article{
    box-shadow:0 0 3px var(--shadow);
    background-color:var(--top-color);
    margin:8px 0;
    padding:15px;
    border-radius: 0.5em;
}
breadcrumb-trail{
    box-shadow:0 0 3px var(--shadow);
    background-color:var(--top-color);
    margin:8px 0;
    padding:0.5em 1ex;
    display: table;
    color: var(--subtle-text-color);
    border-radius: 0.5em;
}
h1,h2,h3,h4,h5,h6,b,strong{
    font-weight:bold;
}
h1,h2,h3,h4,h5,h6,b,strong,p,label,figcaption{
    margin: 0;
    padding: 0;
}
h1{
    font-size:1.7em;
}
h2{
    font-size:1.5em;
}
h3, b{
    font-size:1.2em;
}
span{
    white-space: nowrap;
}
span>*{
    display: inline-block;
}
p{
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}
br{
    content:" ";
    display: block;
    margin-bottom: 1.5em;
}
br ~ br{
    display: inline-block;
}
a{
    text-decoration: none;
    color:var(--link-blue);
}
a:hover{
    color:var(--link-hover);
    text-decoration:underline;
}
a:active{
    background-color:#EEF;
}
input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="date"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="time"],textarea{
    font-family: inherit;
    font-size: 1em;
    outline:none;
    border-radius:0.4em;
    border:0.05em solid #6666d7;
    padding:0.2em 1ex;
}
button, .btn-1, input[type=button], input[type=submit], input[type=reset],::-webkit-file-upload-button{
    font-family: inherit;
    font-size: 1em;
    outline:none;
    border-radius:0.4em;
    border:0.05em solid #6666d7;
    color:#6666d7;
    padding:0.2em 1ex;
    background-color:transparent;
    cursor: pointer;
}
button:hover, .btn-1:hover, input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover,::-webkit-file-upload-button:hover{
    background-color:#6666d7;
    color:var(--text-color);
    text-decoration:none;
}
button:active, .btn-1:active, input[type=button]:active, input[type=submit]:active, input[type=reset]:active,::-webkit-file-upload-button:active{
    box-shadow: inset 0 0 8px #303030, inset 0 0 3px #303030;
    border-color: var(--text-color);
}
.btn-lg{
    padding:1em 10ex;
}
.btn-lg-2{
    padding:1em 2ex;
}
.btn-call-to-action{
    padding:0.8em 2ex;
    margin: 1ex;
    position: absolute;
    right:    0;
    bottom:   0;
}
.btn-warning{
    outline:none;
    border:0.05em solid #d43d3d;
    color:#d43d3d;
    background-color:transparent;
}
btn-group, btn-group.centered{
    display: table;
}
btn-group>*{
    border-radius: 0;
}
btn-group:not(.btn-group-square)>*:first-child{
    border-top-left-radius: 0.4em;
    border-bottom-left-radius: 0.4em;
}
btn-group:not(.btn-group-square)>*:last-child{
    border-top-right-radius: 0.4em;
    border-bottom-right-radius: 0.4em;
}
input[type=checkbox]{
    border: 0;
    width: 1em;
    height: 1em;
    vertical-align:middle;
}
code{
    display:block;
    padding:0.6em;
    background-color:var(--bottom-color);
    border-radius:0.4em;
    box-shadow:inset 0 0 0.3em #404040;
    overflow:auto;
    font-family:monospace;
    white-space: pre;
}
figure{
    text-align:center;
    margin-top:0.5em;
    margin-bottom:0.5em;
}
figure figcaption{
    margin-top:0.2em;
}
figure img{
    width: 60%
}
footer{
    color: var(--subtle-text-color);
    padding: 1em 2%;
    margin-top:2.5em;
    border-top:1px currentcolor solid;
    width: 96%;
}
hr{
    border-color: var(--subtle-text-color)
}
.hr {
    color: var(--subtle-text-color) !important;
    width: 100%;
    text-align: center;
    border-bottom: 1px solid var(--subtle-text-color);
    height: 0.5em;
    margin-bottom: 0.5em;
    grid-area: hr;
}
.hr *{
    background:var(--medium-color);
    padding:0 10px;
}
.bottomBackground{
    background-color:var(--medium-color);
    border-radius:100%;
}
ul *{
    margin-left:1em;
}
ol{
    list-style-type:decimal;
}
.centering{
    text-align: center;
}
.centered{
    margin-left: auto;
    margin-right: auto;
    display: block;
}
.fillWidth{
    width: 100%;
    box-sizing: border-box;
}
.mobileOnly{
    display:none;
}
.noResize{
    resize: none;
}
.verticalResize{
    resize: vertical;
}
.minH-1{
    min-height: 1em;
}
.minH-lg{
    min-height: 4em;
}
.grid{
    display: grid;
}

